--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc -w"
+    "prepare": "husky install",
+    "start": "tsup --watch",
+    "build": "tsup",
+    "lint": "eslint --fix --ext .ts,.tsx,.js,.jsx --quiet ./"
   },
   "bin": {
     "nikola": "bin/nikola.js"
@@ -12,17 +15,40 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "lint-staged": {
+    "**/*.{js,jsx,tsx,ts}": [
+      "eslint --fix"
+    ]
+  },
   "dependencies": {
     "@vitejs/plugin-react": "^4.0.3",
     "cac": "^6.7.14",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "fs-extra": "^11.1.1",
+    "prettier": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite": "^4.4.5"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@types/fs-extra": "^11.0.1",
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "commitlint": "^17.7.1",
+    "eslint": "^8.47.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
+    "ora": "^7.0.1",
+    "rollup": "^3.28.1",
+    "tsup": "^7.2.0",
     "typescript": "^5.1.6"
   }
 }
