--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsup --watch",
+    "dev": "tsup --watch",
     "build": "tsup",
-    "lint": "eslint --fix --ext .ts,.tsx,.js,.jsx --quiet ./",
+    "preview": "cd build && serve .",
+    "lint": "eslint --ext .ts,.tsx,.js,.jsx ./",
+    "lint:fix": "eslint --fix --ext .ts,.tsx,.js,.jsx --quiet ./",
     "prepare": "husky install",
-    "test:init": "vitest --ui",
+    "test:unit": "vitest run",
+    "test:ui": "vitest --ui",
     "prepare:e2e": "tsx scripts/prepare-e2e.ts",
     "test:e2e": "playwright test"
   },
@@ -32,11 +35,13 @@
     "prettier": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "vite": "^4.4.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
+    "@loadable/component": "^5.15.3",
     "@playwright/test": "^1.37.1",
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^20.4.2",
@@ -50,6 +55,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "execa": "^8.0.1",
+    "fast-glob": "^3.3.1",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "ora": "^7.0.1",
