--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     ]
   },
   "dependencies": {
+    "@mdx-js/rollup": "2.1.3",
     "@vitejs/plugin-react": "^4.0.3",
     "cac": "^6.7.14",
     "eslint-config-prettier": "^9.0.0",
@@ -36,6 +37,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.1.0",
+    "rehype-stringify": "^10.0.0",
+    "remark-frontmatter": "^4.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-mdx-frontmatter": "^3.0.0",
+    "remark-parse": "^10.0.2",
+    "remark-rehype": "^10.1.0",
+    "unified": "^10.1.2",
     "vite": "^4.4.5"
   },
   "devDependencies": {
@@ -44,6 +54,7 @@
     "@loadable/component": "^5.15.3",
     "@playwright/test": "^1.37.1",
     "@types/fs-extra": "^11.0.1",
+    "@types/hast": "^3.0.0",
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -63,6 +74,7 @@
     "tsup": "^7.2.0",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6",
+    "unist-util-visit": "^5.0.0",
     "vitest": "^0.34.2"
   }
 }
