--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     ]
   },
   "dependencies": {
-    "@mdx-js/rollup": "2.1.3",
+    "@mdx-js/rollup": "^2.3.0",
     "@vitejs/plugin-react": "^4.0.3",
     "cac": "^6.7.14",
     "eslint-config-prettier": "^9.0.0",
@@ -39,7 +39,7 @@
     "react-router-dom": "^6.15.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-slug": "^5.1.0",
-    "rehype-stringify": "^10.0.0",
+    "rehype-stringify": "^9.0.3",
     "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
     "remark-mdx-frontmatter": "^3.0.0",
@@ -67,6 +67,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "execa": "^8.0.1",
     "fast-glob": "^3.3.1",
+    "hast": "^1.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "ora": "^7.0.1",
