--- a/package.json
+++ b/package.json
@@ -27,34 +27,36 @@
     ]
   },
   "dependencies": {
+    "@loadable/component": "^5.15.3",
     "@mdx-js/rollup": "^2.3.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "acorn": "^8.10.0",
     "cac": "^6.7.14",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
-    "prettier": "^3.0.2",
+    "github-slugger": "^2.0.0",
+    "hast-util-from-html": "^2.0.1",
+    "ora": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "rehype-autolink-headings": "^6.1.1",
-    "rehype-slug": "^5.1.0",
-    "rehype-stringify": "^9.0.3",
     "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
+    "remark-mdx": "^2.3.0",
     "remark-mdx-frontmatter": "^3.0.0",
-    "remark-parse": "^10.0.2",
-    "remark-rehype": "^10.1.0",
-    "unified": "^10.1.2",
+    "remark-stringify": "^10.0.3",
+    "shiki": "^0.14.4",
+    "unocss": "^0.55.7",
     "vite": "^4.4.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
-    "@loadable/component": "^5.15.3",
     "@playwright/test": "^1.37.1",
     "@types/fs-extra": "^11.0.1",
-    "@types/hast": "^3.0.0",
+    "@types/hast": "^2.3.4",
+    "@types/mdast": "^3.0.10",
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -63,18 +65,25 @@
     "@vitest/ui": "^0.34.2",
     "commitlint": "^17.7.1",
     "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "execa": "^8.0.1",
-    "fast-glob": "^3.3.1",
     "hast": "^1.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
-    "ora": "^7.0.1",
+    "mdast-util-mdxjs-esm": "^1.3.1",
+    "prettier": "^3.0.2",
+    "rehype-slug": "^5.1.0",
+    "rehype-stringify": "^9.0.3",
+    "remark-parse": "^10.0.2",
+    "remark-rehype": "^10.1.0",
     "rollup": "^3.28.1",
     "tsup": "^7.2.0",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6",
+    "unified": "^10.1.2",
     "unist-util-visit": "^5.0.0",
     "vitest": "^0.34.2"
   }
