--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsup --watch",
-    "build": "tsup",
+    "build": "tsup && pnpm build:deps",
+    "build:deps": "tsx ./scripts/prebundle.ts",
     "preview": "cd build && serve .",
     "lint": "eslint --ext .ts,.tsx,.js,.jsx ./",
     "lint:fix": "eslint --fix --ext .ts,.tsx,.js,.jsx --quiet ./",
@@ -31,11 +32,13 @@
     "@babel/helper-plugin-utils": "^7.22.5",
     "@babel/preset-react": "^7.22.15",
     "@babel/traverse": "^7.22.17",
+    "@iconify-json/carbon": "^1.1.21",
     "@loadable/component": "^5.15.3",
     "@mdx-js/rollup": "^2.3.0",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react": "^4.0.4",
     "acorn": "^8.10.0",
     "cac": "^6.7.14",
+    "esbuild": "^0.19.2",
     "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
     "github-slugger": "^2.0.0",
@@ -48,19 +51,21 @@
     "rehype-autolink-headings": "^6.1.1",
     "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
-    "remark-mdx": "^2.3.0",
     "remark-mdx-frontmatter": "^3.0.0",
-    "remark-stringify": "^10.0.3",
+    "resolve": "^1.22.4",
     "shiki": "^0.14.4",
     "sirv": "^2.0.3",
     "unocss": "^0.55.7",
-    "vite": "^4.4.5"
+    "vite": "^4.4.9"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
-    "@iconify-json/carbon": "^1.1.21",
+    "@mdx-js/mdx": "^2.1.5",
     "@playwright/test": "^1.37.1",
+    "@types/babel__core": "^7.20.0",
+    "@types/babel__helper-plugin-utils": "^7.10.0",
+    "@types/babel__traverse": "^7.18.3",
     "@types/fs-extra": "^11.0.1",
     "@types/hast": "^2.3.4",
     "@types/lodash-es": "^4.17.9",
@@ -68,6 +73,7 @@
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/resolve": "^1.20.2",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "@vitest/ui": "^0.34.2",
@@ -85,8 +91,10 @@
     "prettier": "^3.0.2",
     "rehype-slug": "^5.1.0",
     "rehype-stringify": "^9.0.3",
+    "remark-mdx": "^2.3.0",
     "remark-parse": "^10.0.2",
     "remark-rehype": "^10.1.0",
+    "remark-stringify": "^10.0.2",
     "rollup": "^3.28.1",
     "sass": "^1.66.1",
     "tsup": "^7.2.0",
