--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "nikola",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "1.0.1",
+  "description": "Vite SSG framework",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup && pnpm build:deps",
@@ -14,19 +16,32 @@
     "test:unit": "vitest run",
     "test:ui": "vitest --ui",
     "prepare:e2e": "tsx scripts/prepare-e2e.ts",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "release": "tsx ./scripts/release.ts"
   },
   "bin": {
     "nikola": "bin/nikola.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "vite",
+    "ssg"
+  ],
+  "author": "Niko",
+  "license": "MIT",
   "lint-staged": {
     "**/*.{js,jsx,tsx,ts}": [
       "eslint --fix"
     ]
   },
+  "files": [
+    "dist",
+    "bin",
+    "README.md",
+    "src/runtime",
+    "src/theme-default",
+    "src/shared"
+  ],
   "dependencies": {
     "@babel/core": "^7.22.17",
     "@babel/helper-plugin-utils": "^7.22.5",
@@ -38,6 +53,7 @@
     "@vitejs/plugin-react": "^4.0.4",
     "acorn": "^8.10.0",
     "cac": "^6.7.14",
+    "compression": "^1.7.4",
     "esbuild": "^0.19.2",
     "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
@@ -45,8 +61,10 @@
     "hast-util-from-html": "^2.0.1",
     "lodash-es": "^4.17.21",
     "ora": "^7.0.1",
+    "polka": "^0.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.15.0",
     "rehype-autolink-headings": "^6.1.1",
     "remark-frontmatter": "^4.0.1",
@@ -77,17 +95,21 @@
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "@vitest/ui": "^0.34.2",
+    "chalk": "^5.3.0",
     "commitlint": "^17.7.1",
+    "conventional-changelog-cli": "^4.1.0",
+    "enquirer": "^2.4.1",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "execa": "^8.0.1",
+    "execa": "^5.0.0",
     "hast": "^1.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "mdast-util-mdxjs-esm": "^1.3.1",
+    "minimist": "^1.2.8",
     "prettier": "^3.0.2",
     "rehype-slug": "^5.1.0",
     "rehype-stringify": "^9.0.3",
@@ -97,6 +119,7 @@
     "remark-stringify": "^10.0.2",
     "rollup": "^3.28.1",
     "sass": "^1.66.1",
+    "semver": "^7.5.4",
     "tsup": "^7.2.0",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6",
