--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nikola",
+  "name": "@niko/nikola",
   "version": "1.0.2",
   "description": "Vite SSG framework",
   "main": "dist/index.js",
